# CompetitorScope

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.en.md  README.md  pyproject.toml
doc/: PRD.md  todo.md
doc/memory-bank/: architecture.md  bug.md  design-document.md  implementation-plan.md  product-requirements.md  progress.md  tech-stack.md
docs/review/: 2026-05-13-step7-8-e2e.md
docs/review/agent-output-hitl/: 2026-05-14-agent-output-hitl-stage-evidence.md
docs/review/step7-8/: 2026-05-13-hitl-done-guard.md  2026-05-13-step7-8-regression.md  2026-05-13-timing-chain.md  2026-05-13-transition-hitl-evidence.md
docs/review/step7-api/: 2026-05-13-sse-streaming-e2e.md
scripts/: run_local.py  test_e2e.mjs  test_e2e.py
src/: config.py  main.py
src/api/: deps.py
src/api/v1/: __init__.py  analysis.py  hitl.py  reports.py  runtime.py
src/graph/: runtime_events.py  serialization.py  state.py  workflow.py
src/models/: run.py  source.py
src/prompts/: analyst.py  collector.py  comparator.py  planner.py  writer.py
src/schemas/: domain.py
src/services/: database.py  llm.py
src/tools/: web_scraper.py  web_search.py
tests/: test_hitl_workflow.py  test_sse_broker.py
web/: next.config.ts  package.json  pnpm-lock.yaml  scripts_test_e2e.mjs  test_agent_output_hitl_guard.mjs  test_agent_output_markdown_hitl.mjs  test_e2e.mjs  test_hitl_countdown_guard.mjs  test_hitl_done_guard.mjs  test_interactive_verification.mjs  test_report_rendering_guard.mjs  test_sse_streaming.mjs  test_step7_8_regression.mjs  test_transition_hitl_evidence.mjs
(+20 files in other folders)
