[project]
name = "competitor-scope"
version = "0.1.0"
description = "Multi-agent competitive analysis system"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "tavily-python>=0.5.0",
    "httpx>=0.28.0",
    "readability-lxml>=0.8.0",
    "lxml>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
